--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "1.0.10"
   },
   "dependencies": {
+    "material-ui": "next",
+    "material-ui-icons": "^1.0.0-alpha.19",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
